k8s/example-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: demo-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: simple-web
        image: httpd:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo-ns
spec:
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: demo-ns
  annotations:
    caddy.ingress.kubernetes.io/tls: "true"
spec:
  ingressClassName: caddy
  rules:
    - host: app.joels.computer
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 80
